--- a/signup.html
+++ b/signup.html
@@ -112,7 +112,9 @@
             </div>
             <p class="phoneMsg phoneInvalid invalidColor"></p>
             <!-- 판매회원가입 전용 input 요소 -->
-            <label for="businessNum" class="seller-only">사업자 등록번호</label>
+            <label for="businessNum" class="seller-only" hidden
+              >사업자 등록번호</label
+            >
             <div class="businessnum-wrap">
               <input
                 type="text"
@@ -121,26 +123,26 @@
                 class="seller-only"
                 maxlength="10"
                 pattern="\d{10}"
+                hidden
               />
 
-              <button type="submit" class="duplicate-check seller-only">
+              <button type="submit" class="duplicate-check seller-only" hidden>
                 인증
               </button>
             </div>
-            <p class="businessNumMsg invalidColor seller-only" hidden>
-              필수 정보입니다.
-            </p>
+            <p class="businessNumMsg invalidColor" hidden>필수 정보입니다.</p>
 
-            <label for="store-name" class="seller-only">스토어 이름</label>
+            <label for="store-name" class="seller-only" hidden
+              >스토어 이름</label
+            >
             <input
               type="text"
               name="storeName"
               id="storeName"
               class="seller-only"
+              hidden
             />
-            <p class="storeNameMsg invalidColor seller-only" hidden>
-              필수 정보입니다.
-            </p>
+            <p class="storeNameMsg invalidColor" hidden>필수 정보입니다.</p>
             <div class="no-wrap">
               <input type="checkbox" id="checkbox" class="txt-hide" />
               <label for="checkbox" class="checkbox"
