🎨 변수명 수정

--- a/signup.html
+++ b/signup.html
@@ -68,7 +68,7 @@
               class="invalid-passwordImg"
               required
             />
-            <p class="password-checkMsg invalidColor"></p>
+            <p class="passwordCheckMsg invalidColor"></p>
 
             <!-- p태그 비밀번호와 비밀번호 재확인 일치 여부 확인 메세지 알림 -->
             <!-- <p class=""></p> -->
