🎨 로고 이동페이지 임시 수정 부분 변경

--- a/signup.html
+++ b/signup.html
@@ -12,8 +12,8 @@
     <header>
       <!-- 로고 클릭시 상품목록 페이지로 이동 -->
       <h1>
-        <a href="signup.html"
-          ><img src="./assets/Logo-hodu.png" alt="HODU"
+        <a href="index.html">
+          <img src="./assets/Logo-hodu.png" alt="HODU"
         /></a>
       </h1>
     </header>
