⚡️ 🎨 주석 수정 및 안쓰는 내용 삭제

--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
         </button>
       </section>
       <!-- 상품 목록 리스트 -->
-      <!-- 아티클별 a 태그 적용 -->
+      <!-- 아티클별 a 태그 적용 (기존 디자인 태그 주석처리)-->
       <section class="goodsList">
         <h2 class="sr-only">호두 상품 목록</h2>
         <article>
           <a href="#">
             <img src="https://via.placeholder.com/382x382" alt="" />
-            <p>|</p>
-            <h3>|</h3>
-            <p class="price"><span>|</span>원</p>
+            <p></p>
+            <h3></h3>
+            <p class="price"><span></span>원</p>
             <!-- <p>우당탕탕 라이캣의 실험실</p>
             <h3>Hack Your Life 개발자 노트북 파우치</h3>
             <p class="price"><span>29,000</span>원</p> -->
@@ -94,9 +94,9 @@
         <article>
           <a href="#">
             <img src="https://via.placeholder.com/382x382" alt="" />
-            <p>|</p>
-            <h3>|</h3>
-            <p class="price"><span>|</span>원</p>
+            <p></p>
+            <h3></h3>
+            <p class="price"><span></span>원</p>
             <!-- <p>제주코딩베이스캠프</p>
             <h3>네 개발잡니다 개발자키링 금속키링</h3>
             <p class="price"><span>29,000</span>원</p> -->
@@ -106,9 +106,9 @@
         <article>
           <a href="goods.html">
             <img src="https://via.placeholder.com/382x382" alt="" />
-            <p>|</p>
-            <h3>|</h3>
-            <p class="price"><span>|</span>원</p>
+            <p></p>
+            <h3></h3>
+            <p class="price"><span></span>원</p>
             <!-- <p>백엔드글로벌</p>
             <h3>딥러닝 개발자 무릎 담요</h3>
             <p class="price"><span>29,000</span>원</p> -->
@@ -117,9 +117,9 @@
         <article>
           <a href="#">
             <img src="https://via.placeholder.com/382x382" alt="" />
-            <p>|</p>
-            <h3>|</h3>
-            <p class="price"><span>|</span>원</p>
+            <p></p>
+            <h3></h3>
+            <p class="price"><span></span>원</p>
             <!-- <p>코딩앤유</p>
             <h3>우당탕탕 라이캣의 실험실 스티커 팩</h3>
             <p class="price"><span>29,000</span>원</p> -->
@@ -128,9 +128,9 @@
         <article>
           <a href="#">
             <img src="https://via.placeholder.com/382x382" alt="" />
-            <p>|</p>
-            <h3>|</h3>
-            <p class="price"><span>|</span>원</p>
+            <p></p>
+            <h3></h3>
+            <p class="price"><span></span>원</p>
             <!-- <p>파이썬스쿨</p>
             <h3>버그를 Java라 버그잡는 개리씨 키링 개발자키링...</h3>
             <p class="price"><span>29,000</span>원</p> -->
