--- a/goods.html
+++ b/goods.html
@@ -67,9 +67,9 @@
         <img src="https://via.placeholder.com/600x600" alt="" />
         <section class="goodsInfo-wrap">
           <div class="goodsInfo">
-            <p>|</p>
-            <h3>|</h3>
-            <p class="price"><span>0</span>원</p>
+            <p></p>
+            <h3></h3>
+            <p class="price"><span></span>원</p>
             <!-- <p>백엔드 글로벌</p> -->
             <!-- <h3>딥러닝 개발자 무릎 담요</h3> -->
             <!-- <p class="price"><span>17,500</span>원</p> -->
