--- a/index.html
+++ b/index.html
@@ -136,6 +136,17 @@
             <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
+        <article>
+          <a href="#">
+            <img src="https://via.placeholder.com/382x382" alt="" />
+            <p></p>
+            <h3></h3>
+            <p class="price"><span></span>원</p>
+            <!-- <p>파이썬스쿨</p>
+            <h3>버그를 Java라 버그잡는 개리씨 키링 개발자키링...</h3>
+            <p class="price"><span>29,000</span>원</p> -->
+          </a>
+        </article>
       </section>
     </main>
     <footer>
