🎨 section 내 헤딩 태그 및 주석 수정

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
         </ul>
 
         <section>
-          <h2 class="sr-only">로그인 아이디 및 비밀번호 입력</h2>
+          <h3 class="sr-only">로그인 아이디 및 비밀번호 입력</h3>
           <form action="#" method="post" class="login-form">
             <label for="id" class="sr-only">아이디</label>
             <input
@@ -46,13 +46,13 @@
               placeholder="비밀번호"
               autocomplete="current-password"
             />
-            <!-- p태그 로그인 오류 메세지 띄우는 역할 -->
+            <!-- p : 로그인 오류 메세지 출력 -->
             <p></p>
-            <!-- form 제출 => 로그인 : 구매회원 페이지로 이동 (페이지 제작 후 연결 예정) -->
+            <!-- form submit : 구매회원 페이지로 이동 -->
             <button type="submit">로그인</button>
           </form>
         </section>
-        <!-- 회원가입 : 회원가입 페이지 연결 / 비밀번호 찾기 : 미구현-->
+        <!-- 비밀번호 찾기 : UI만 구현-->
         <ul class="find">
           <li><a href="signup.html">회원가입</a></li>
           <li><a href="#">비밀번호 찾기</a></li>
