--- a/error.html
+++ b/error.html
@@ -20,12 +20,12 @@
       <button type="button" class="backBtn">이전 페이지</button>
     </main>
     <script>
-      // 메인으로 버튼 클릭시 메인 페이지로 이동
+      // 메인으로 Btn
       document.querySelectorAll("button")[0].addEventListener("click", () => {
         location.href = "index.html";
       });
 
-      // 이전페이지 버튼 클릭 시 이전 페이지로 이동
+      // 이전 페이지 Btn
       document.querySelectorAll("button")[1].addEventListener("click", () => {
         location.href = `${document.referrer}`;
       });
