--- a/signup.html
+++ b/signup.html
@@ -153,8 +153,8 @@
             <div class="no-wrap">
               <input type="checkbox" id="checkbox" class="txt-hide" />
               <label for="checkbox" class="checkbox"
-                >호두샵의 <span>이용약관</span> 및
-                <span>개인정보처리방침</span>에 대한 내용을 확인하였고
+                >호두샵의 <a href="#">이용약관</a> 및
+                <a href="#">개인정보처리방침</a>에 대한 내용을 확인하였고
                 동의합니다.</label
               >
               <!-- form submit : 로그인 페이지로 이동 -->
