🎨 미사용 코드 수정 및 임시 img 파일경로 수정

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <!-- 상품 목록 페이지 -->
     <header>
       <div class="search-wrap">
         <h1>
@@ -65,79 +64,60 @@
           <img src="./assets/icon-swiper-1.svg" alt="left swiper button" />
         </button>
         <a href="#">
-          <img src="http://placeholder.co/1920x500" alt="" />
+          <img src="https://placehold.co/1920x500" alt="" />
         </a>
         <button class="rightBtn">
           <img src="./assets/icon-swiper-2.svg" alt="right swiper button" />
         </button>
       </section>
-      <!-- article >  a 적용 (기존 디자인 태그 주석처리)-->
       <section class="goodsList">
         <h2 class="sr-only">호두 상품 목록</h2>
         <article>
           <a href="#">
-            <img src="https://via.placeholder.com/382x382" alt="" />
+            <img src="https://placehold.co/382x382" alt="" />
             <p></p>
             <h3></h3>
             <p class="price"><span></span>원</p>
-            <!-- <p>우당탕탕 라이캣의 실험실</p>
-            <h3>Hack Your Life 개발자 노트북 파우치</h3>
-            <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
         <article>
           <a href="#">
-            <img src="https://via.placeholder.com/382x382" alt="" />
+            <img src="https://placehold.co/382x382" alt="" />
             <p></p>
             <h3></h3>
             <p class="price"><span></span>원</p>
-            <!-- <p>제주코딩베이스캠프</p>
-            <h3>네 개발잡니다 개발자키링 금속키링</h3>
-            <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
         <article>
           <a href="goods.html">
-            <img src="https://via.placeholder.com/382x382" alt="" />
+            <img src="https://placehold.co/382x382" alt="" />
             <p></p>
             <h3></h3>
             <p class="price"><span></span>원</p>
-            <!-- <p>백엔드글로벌</p>
-            <h3>딥러닝 개발자 무릎 담요</h3>
-            <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
         <article>
           <a href="#">
-            <img src="https://via.placeholder.com/382x382" alt="" />
+            <img src="https://placehold.co/382x382" alt="" />
             <p></p>
             <h3></h3>
             <p class="price"><span></span>원</p>
-            <!-- <p>코딩앤유</p>
-            <h3>우당탕탕 라이캣의 실험실 스티커 팩</h3>
-            <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
         <article>
           <a href="#">
-            <img src="https://via.placeholder.com/382x382" alt="" />
+            <img src="https://placehold.co/382x382" alt="" />
             <p></p>
             <h3></h3>
             <p class="price"><span></span>원</p>
-            <!-- <p>파이썬스쿨</p>
-            <h3>버그를 Java라 버그잡는 개리씨 키링 개발자키링...</h3>
-            <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
         <article>
           <a href="#">
-            <img src="https://via.placeholder.com/382x382" alt="" />
+            <img src="https://placehold.co/382x382" alt="" />
             <p></p>
             <h3></h3>
             <p class="price"><span></span>원</p>
-            <!-- <p>파이썬스쿨</p>
-            <h3>버그를 Java라 버그잡는 개리씨 키링 개발자키링...</h3>
-            <p class="price"><span>29,000</span>원</p> -->
           </a>
         </article>
       </section>
@@ -147,11 +127,7 @@
         <ul class="about-wrap">
           <li><a href="#">호두샵 소개</a></li>
           <li><a href="#">이용약관</a></li>
-          <li>
-            <span>
-              <a href="#">개인정보처리방침</a>
-            </span>
-          </li>
+          <li><a href="#">개인정보처리방침</a></li>
           <li><a href="#">전자금융거래약관</a></li>
           <li><a href="#">청소년보호정책</a></li>
           <li><a href="#">제휴문의</a></li>
