💄 placeholder 이미지 경로 수정

--- a/goods.html
+++ b/goods.html
@@ -61,7 +61,7 @@
     <main>
       <section class="buy-wrap">
         <h2 class="sr-only">상품 상세 내용</h2>
-        <img src="https://via.placeholder.com/600x600" alt="" />
+        <img src="https://placehold.co/600x600" alt="" />
         <section class="goodsInfo-wrap">
           <div class="goodsInfo">
             <p></p>
