🐛 a태그 경로로 query string 미적용 오류 해결

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </a>
         </article>
         <article>
-          <a href="goods.html">
+          <a href="#">
             <img src="https://placehold.co/382x382" alt="" />
             <p></p>
             <h3></h3>
