♻️ 공통 사용 GNB 및 footer 코드 common.css로 이동

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header>
+    <header class="GNB">
       <div class="search-wrap">
         <h1>
           <a href="index.html"
