--- a/goods.html
+++ b/goods.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- 상품 상세 페이지 -->
-    <header>
+    <header class="GNB">
       <div class="search-wrap">
         <h1>
           <a href="index.html"
