🎨 공통 fetchUrl 함수로 지정하여 적용

--- a/login.html
+++ b/login.html
@@ -58,6 +58,7 @@
         </ul>
       </article>
     </main>
+    <script src="./js/common.js"></script>
     <script src="./js/login.js"></script>
   </body>
 </html>
