--- a/signup.html
+++ b/signup.html
@@ -157,6 +157,7 @@
         </section>
       </article>
     </main>
+    <script src="./js/common.js"></script>
     <script src="./js/signup.js"></script>
   </body>
 </html>
