📝 장바구니 마크업 수정

--- a/cart.html
+++ b/cart.html
@@ -64,17 +64,17 @@
       <form action="#">
         <ul class="cart-item">
           <li>
-            <input type="checkbox" id="check" />
-            <label for="check">
-              <article>
-                <img src="https://placehold.co/160x160" alt="상품 이미지" />
-                <div>
+            <article>
+              <input type="checkbox" id="check" />
+              <label for="check">
+                <div class="goods-details">
+                  <img src="https://placehold.co/160x160" alt="상품 이미지" />
                   <p>백엔드 글로벌</p>
                   <h3>딥러닝 개발자 무릎 담요</h3>
                   <span>17,500</span>
                   <p>택배배송 / 무료배송</p>
                 </div>
-                <div>
+                <div class="goods-quantity">
                   <button class="minus" type="button" id="minus">
                     <img src="./assets/icon-minus-line.svg" alt="수량 빼기" />
                   </button>
@@ -83,27 +83,28 @@
                     <img src="./assets/icon-plus-line.svg" alt="수량 더하기" />
                   </button>
                 </div>
-                <div>
-                  <p></p>
+                <div class="goods-price">
+                  <p>17,500원</p>
                   <button type="submit" class="buy-btn">주문하기</button>
                 </div>
                 <button type="submit" class="delete-btn">
                   <img src="./assets/icon-delete.svg" alt="" />
                 </button>
-              </article>
-            </label>
+              </label>
+            </article>
           </li>
           <li>
-            <input type="checkbox" id="check" />
-            <label for="check">
-              <article>
-                <img src="https://placehold.co/160x160" alt="상품 이미지" />
-                <div>
-                  <p></p>
-                  <h3></h3>
-                  <p></p>
+            <article>
+              <input type="checkbox" id="check" />
+              <label for="check">
+                <div class="goods-details">
+                  <img src="https://placehold.co/160x160" alt="상품 이미지" />
+                  <p>백엔드 글로벌</p>
+                  <h3>딥러닝 개발자 무릎 담요</h3>
+                  <span>17,500</span>
+                  <p>택배배송 / 무료배송</p>
                 </div>
-                <div>
+                <div class="goods-quantity">
                   <button class="minus" type="button" id="minus">
                     <img src="./assets/icon-minus-line.svg" alt="수량 빼기" />
                   </button>
@@ -112,15 +113,15 @@
                     <img src="./assets/icon-plus-line.svg" alt="수량 더하기" />
                   </button>
                 </div>
-                <div>
-                  <p></p>
+                <div class="goods-price">
+                  <p>17,500원</p>
                   <button type="submit" class="buy-btn">주문하기</button>
                 </div>
                 <button type="submit" class="delete-btn">
                   <img src="./assets/icon-delete.svg" alt="" />
                 </button>
-              </article>
-            </label>
+              </label>
+            </article>
           </li>
         </ul>
         <ul class="cart-calc">
