📝 장바구니 기존 article 마크업 주석처리

--- a/cart.html
+++ b/cart.html
@@ -63,7 +63,7 @@
       </ul>
       <form action="#">
         <ul class="cart-item">
-          <li>
+          <!-- <li>
             <article>
               <input type="checkbox" id="check" />
               <label for="check">
@@ -95,8 +95,8 @@
           </li>
           <li>
             <article>
-              <input type="checkbox" id="check" />
-              <label for="check">
+              <input type="checkbox" id="check2" />
+              <label for="check2">
                 <div class="goods-details">
                   <img src="https://placehold.co/160x160" alt="상품 이미지" />
                   <p>백엔드 글로벌</p>
@@ -122,7 +122,7 @@
                 </button>
               </label>
             </article>
-          </li>
+          </li> -->
         </ul>
         <ul class="cart-calc">
           <li>
