--- a/cart.html
+++ b/cart.html
@@ -127,7 +127,7 @@
         <ul class="cart-calc">
           <li>
             <p>총 상품금액</p>
-            <span>0</span>
+            <span class="total-price">0</span>
           </li>
           <li>
             <p>상품 할인</p>
@@ -135,11 +135,11 @@
           </li>
           <li>
             <p>배송비</p>
-            <span>0</span>
+            <span class="total-shipping-fee">0</span>
           </li>
           <li>
             <p>결제 예정 금액</p>
-            <span>0</span>
+            <span class="payment-amount">0</span>
           </li>
         </ul>
         <button type="submit" class="buy-btn">주문하기</button>
