--- a/cart.html
+++ b/cart.html
@@ -51,7 +51,11 @@
     <main>
       <h2>장바구니</h2>
       <ul class="cart-info">
-        <li><img src="./assets/circle-check-box.svg" alt="" /></li>
+        <li>
+          <button type="button" class="all-check">
+            <img src="./assets/circle-check-box.svg" alt="전체 상품 선택하기" />
+          </button>
+        </li>
         <li>상품정보</li>
         <li>수량</li>
         <li>상품금액</li>
