📝 장바구니 a태그 링크 연결

--- a/cart.html
+++ b/cart.html
@@ -32,7 +32,7 @@
       <div class="btn-wrap">
         <ul>
           <li class="cart">
-            <a href="#" class="cartBtn"> 장바구니 </a>
+            <a href="./cart.html" class="cartBtn"> 장바구니 </a>
           </li>
           <li class="login">
             <a href="./login.html" class="loginBtn"> 로그인 </a>
