--- a/goods.html
+++ b/goods.html
@@ -33,7 +33,7 @@
       <div class="btn-wrap">
         <ul>
           <li class="cart">
-            <a href="#" class="cartBtn"> 장바구니 </a>
+            <a href="./cart.html" class="cartBtn"> 장바구니 </a>
           </li>
           <li class="login">
             <!-- login : 비회원에게만 보이는 UI -->
