📝 전체 상품 선택 버튼 이미지 태그 제거

--- a/cart.html
+++ b/cart.html
@@ -52,9 +52,7 @@
       <h2>장바구니</h2>
       <ul class="cart-info">
         <li>
-          <button type="button" class="all-check-btn">
-            <img src="./assets/circle-check-box.svg" alt="전체 상품 선택하기" />
-          </button>
+          <button type="button" class="all-check-btn"></button>
         </li>
         <li>상품정보</li>
         <li>수량</li>
