📝 order list 마크업 수정

--- a/order.html
+++ b/order.html
@@ -58,36 +58,35 @@
       </ul>
       <section class="order-list">
         <h3 class="sr-only">주문 품목 리스트</h3>
-        <article>
-          <ul>
-            <li>
+
+        <ul>
+          <li>
+            <article>
               <img src="./assets/담요.png" alt="" />
               <div class="order-details">
                 <p>백엔드 글로벌</p>
                 <h3>딥러닝 개발자 무릎 담요</h3>
                 <p>수량 : <span>1</span>개</p>
               </div>
-            </li>
-            <li><p>-</p></li>
-            <li><p>무료배송</p></li>
-            <li><p>17,500원</p></li>
-          </ul>
-        </article>
-        <article>
-          <ul>
-            <li>
+              <p class="discount">-</p>
+              <p class="fee">무료배송</p>
+              <p class="price">17,500원</p>
+            </article>
+          </li>
+          <li>
+            <article>
               <img src="./assets/담요.png" alt="" />
               <div class="order-details">
                 <p>백엔드 글로벌</p>
                 <h3>딥러닝 개발자 무릎 담요</h3>
                 <p>수량 : <span>1</span>개</p>
               </div>
-            </li>
-            <li><p>-</p></li>
-            <li><p>무료배송</p></li>
-            <li><p>17,500원</p></li>
-          </ul>
-        </article>
+              <p class="discount">-</p>
+              <p class="fee">무료배송</p>
+              <p class="price">17,500원</p>
+            </article>
+          </li>
+        </ul>
       </section>
       <section class="total-price">
         <h3>총 주문금액 <span>46,500원</span></h3>
