--- a/order.html
+++ b/order.html
@@ -124,15 +124,31 @@
           <section class="payment">
             <h3>결제 수단</h3>
             <div>
-              <input type="radio" id="card" name="payment" />
+              <input
+                type="radio"
+                id="card"
+                name="payment"
+                value="card"
+                checked
+              />
               <label for="card">신용/체크카드</label>
-              <input type="radio" id="bankbook" name="payment" />
-              <label for="bankbook">무통장 입금</label>
-              <input type="radio" id="phone" name="payment" />
+              <input type="radio" id="deposit" name="payment" value="deposit" />
+              <label for="deposit">무통장 입금</label>
+              <input type="radio" id="phone" name="payment" value="phone" />
               <label for="phone">휴대폰 결제</label>
-              <input type="radio" id="naverpay" name="payment" />
+              <input
+                type="radio"
+                id="naverpay"
+                name="payment"
+                value="naverpay"
+              />
               <label for="naverpay">네이버페이</label>
-              <input type="radio" id="kakaopay" name="payment" />
+              <input
+                type="radio"
+                id="kakaopay"
+                name="payment"
+                value="kakaopay"
+              />
               <label for="kakaopay">카카오페이</label>
             </div>
           </section>
