--- a/sellerDashBoard.html
+++ b/sellerDashBoard.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="./css/sellerDashBoard.css" />
   </head>
   <body>
+    <header class="GNB seller">
+      <h1>
+        <a href="index.html"><img src="./assets/Logo-hodu.png" alt="HODU" /></a>
+      </h1>
+      <p>판매자 센터</p>
+    </header>
     <script src="./js/common.js"></script>
     <script src="./js/sellerDashBoard.js"></script>
   </body>
